[package]
name = "merge-bib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
calamine = { version = "0.26.1", features = ["dates"] }
rust_xlsxwriter = { version = "0.80.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
rayon = "1.10"
rfd = "0.15"
